Add follow-up good answers, breadcrumb nav, and switch to Hacker theme
Every question now includes a verified Follow-up good answer alongside the
follow-up question, per the updated src/TEMPLATE.md and src/README.md
contract. Site now uses jekyll-theme-hacker with a custom default layout
that adds breadcrumb navigation (Home » Topic » Page) to every page.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01E7xXRJQUvpzEmTSDvbksSP